# Axeon-Compiler

Axeon-Compiler/: .gitignore  Cargo.toml  LICENSE  README.md  bench_fib  bench_fib.zc  bench_hello  bench_hello.zc  bench_loop  bench_loop.zc  bench_struct.zc  test.zc  test_c  test_c.c  test_features.zc  test_multiline  test_multiline.zc  test_simple.zc  test_working.zc  test_zc
Axeon-Compiler/.cargo/: config.toml
Axeon-Compiler/demo/: axeon_demo  greeting.c  main  main.c
Axeon-Compiler/docs/: AXEON_COMPLETE_DOC.md  ZEO_LANGUAGE_DOC.md
Axeon-Compiler/include/: arm_neon.h  avx2intrin.h  avx512fintrin.h  avxintrin.h  bmi2intrin.h  float.h  fmaintrin.h  immintrin.h  iso646.h  limits.h  mmintrin.h  nmmintrin.h  pmmintrin.h  shaintrin.h  smmintrin.h  stdalign.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdnoreturn.h  tmmintrin.h  varargs.h  wmmintrin.h  x86intrin.h  xmmintrin.h
Axeon-Compiler/src/: lib.rs
Axeon-Compiler/src/assembler/: mod.rs
Axeon-Compiler/src/backend/: README.md  common.rs  mod.rs
Axeon-Compiler/src/backend/arm/: mod.rs
Axeon-Compiler/src/backend/arm/linker/: emit_dynamic.rs  link.rs  mod.rs  types.rs
Axeon-Compiler/src/backend/i686/: mod.rs
Axeon-Compiler/src/backend/linker_common/: resolve_lib.rs
Axeon-Compiler/src/backend/riscv/: mod.rs
Axeon-Compiler/src/backend/x86/: mod.rs
Axeon-Compiler/src/common/: temp_files.rs
Axeon-Compiler/src/driver/: Cargo.toml  cli.rs  external_tools.rs  file_types.rs  pipeline.rs
Axeon-Compiler/src/frontend/: mod.rs  unified_source.rs  zeoc.rs
Axeon-Compiler/src/frontend/lexer/: scan.rs  token.rs
Axeon-Compiler/src/frontend/preprocessor/: pipeline.rs  pragmas.rs  predefined_macros.rs
Axeon-Compiler/src/linker/: mod.rs
Axeon-Compiler/src/passes/: if_convert.rs
(+12 files in other folders)
